# laroc-chart

./: .gitignore  README.md  pyproject.toml
configs/: base.yaml  phase2_evaluation_manifest.yaml
docs/: architecture.md
src/coral_thesis/: cli.py  config.py  pipeline.py
src/coral_thesis/domain/: __init__.py  contracts.py
src/coral_thesis/phases/: __init__.py  category_mapping.py  chart_detection.py  color_calibration.py  coral_segmentation.py  feature_extraction.py  health_estimation.py
tests/: test_category_mapping.py  test_phase1_inventory.py  test_phase2_calibration.py  test_phase3_inventory.py  test_phase4_feature_extraction.py  test_phase5_health_estimation.py  test_pipeline_description.py
